[package]
name = "dll_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["minwindef", "handleapi", "processthreadsapi", "winuser"]}
target_dlls = { path = "../target_dlls" }
sysinfo = "0.29.8"